--- a/css/janna.scss
+++ b/css/janna.scss
@@ -72,6 +72,7 @@ h3 {
     border-bottom-style: solid;
     border-width: $border-width;
     box-sizing: border-box;
+    padding: 1rem;
 }
 
 .active {
