--- a/css/janna.css
+++ b/css/janna.css
@@ -54,7 +54,8 @@ h3 {
   border-right-style: solid;
   border-bottom-style: solid;
   border-width: 0.5rem;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 1rem; }
 
 .active {
   border-width: 0.3rem; }
