--- a/css/janna.scss
+++ b/css/janna.scss
@@ -1,5 +1,10 @@
-$border-width: 0.5rem;
-
+$border-width: 0.3rem;
+$content-padding: 1.5rem;
+$startpage-padding: 0.1rem;
+$workslist-height: 16rem;
+$maxwidth: 70rem;
+$navigation-height: 3.5rem;
+$switch-width: 40rem;
 
 body {
     font-family: 'Josefin Sans', sans-serif;
@@ -27,20 +32,19 @@ h2 {
     border-right-style: solid;
     border-width: $border-width;
     margin: 0;
-    padding: 2rem;
+    padding: $content-padding;
 }
 
 h3 {
-    padding-right: 1rem;
+    padding-right: $content-padding;
 }
 
 .frame {
-    max-width: 70rem;
+    max-width: $maxwidth;
     margin: auto;
     border-top-style: solid;
     border-left-style: solid;
     border-width: $border-width;
-    // box-shadow: 0 0 20px;
     box-sizing: border-box;
 }
 
@@ -48,36 +52,34 @@ h3 {
 }
 
 .home-item , .navigation-item {
-    height: 3.5rem;
+    height: $navigation-height;
     float: right;
     border-bottom-style: solid;
-    border-bottom-width: $border-width;
+    border-right-style: solid;
+    border-width: $border-width;
+    box-sizing: border-box;
 }
 
 .navigation-content {
-    height: calc(100% - 0.2rem);
-    border-right-style: solid;
-    border-width: $border-width;
+    height: 100%;
     text-align: center;
     padding: 0.2rem;
+    box-sizing: border-box;
 }
 
-.navigation-content:nth-of-type(2) {
-    border-left-style: none;
-    background: pink;
-}
 
 .content {
     border-right-style: solid;
     border-bottom-style: solid;
     border-width: $border-width;
     box-sizing: border-box;
-    padding: 1.2rem;
+    padding: $content-padding;
 }
 
-.active {
-    border-width: 0.3rem;
+.startpage-content {
+    padding: $startpage-padding;
 }
+
 
 .leftCol {
     border-bottom-style: solid;
@@ -85,6 +87,7 @@ h3 {
     border-width: $border-width;
     box-sizing: border-box;
     min-height: 16rem;
+    padding: $content-padding
 }
 
 .rightCol {
@@ -98,11 +101,11 @@ h3 {
     border-right-style: solid;
     border-width: $border-width;
     margin: 0;
-    padding: 2rem;
+    padding: $content-padding;
 }
 
 .workslist {
-    height: 16rem;
+    height: $workslist-height;
     overflow: hidden;
     box-sizing: border-box;
     border-bottom-style: solid;
@@ -111,7 +114,7 @@ h3 {
 }
 
 
-@media (min-width: 40rem) {
+@media (min-width: $switch-width) {
     .navigation-item {
         width: calc(100%/8);
     }
@@ -135,7 +138,7 @@ h3 {
         width: calc(100%/4);
     }
 }
-@media (max-width: 40rem) {
+@media (max-width: $switch-width) {
     .navigation-item {
         width: calc(100%/4);
     }
