--- a/css/janna.css
+++ b/css/janna.css
@@ -1,29 +1,44 @@
 body {
-  font-family: 'Josefin Sans', sans-serif;
-  line-height: 1.1rem; }
+  font-family: 'Josefin Sans', sans-serif; }
 
 a {
   text-decoration: none;
   color: black; }
 
 img {
-  width: 100%;
   box-sizing: border-box;
-  padding: 0.1rem; }
+  padding: 0.1rem;
+  display: block;
+  margin: auto; }
 
 p {
   margin-top: 0;
   padding-top: 0.5rem; }
 
+h1 {
+  color: red;
+  animation: blinker 1s linear infinite; }
+
+em {
+  animation: blinker 1s linear infinite;
+  font-style: normal; }
+
+@keyframes blinker {
+  50% {
+    opacity: 0; } }
 h2 {
   border-bottom-style: solid;
   border-right-style: solid;
   border-width: 0.5rem;
   margin: 0;
-  padding: 2rem; }
+  padding: 1.5rem; }
 
 h3 {
-  padding-right: 1rem; }
+  padding-right: 1.5rem;
+  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; }
+
+iframe {
+  width: 100%; }
 
 .frame {
   max-width: 70rem;
@@ -37,47 +52,40 @@ h3 {
   height: 3.5rem;
   float: right;
   border-bottom-style: solid;
-  border-bottom-width: 0.5rem; }
-
-.navigation-content {
-  height: calc(100% - 0.2rem);
   border-right-style: solid;
   border-width: 0.5rem;
-  text-align: center;
-  padding: 0.2rem; }
+  box-sizing: border-box; }
 
-.navigation-content:nth-of-type(2) {
-  border-left-style: none;
-  background: pink; }
+.navigation-content {
+  height: 100%;
+  text-align: center;
+  padding: 0.2rem;
+  box-sizing: border-box; }
 
 .content {
   border-right-style: solid;
   border-bottom-style: solid;
   border-width: 0.5rem;
   box-sizing: border-box;
-  padding: 1.2rem; }
+  padding: 1.5rem; }
 
-.active {
-  border-width: 0.3rem; }
+.startpage-content {
+  padding: 0.1rem; }
 
-.leftCol {
+.leftCol, .rightCol {
   border-bottom-style: solid;
   border-right-style: solid;
   border-width: 0.5rem;
   box-sizing: border-box;
-  min-height: 16rem; }
-
-.rightCol {
-  border-width: 0.5rem;
-  box-sizing: border-box;
-  min-height: 16rem; }
+  min-height: 16rem;
+  padding: 1.5rem; }
 
 .taglist {
   border-bottom-style: solid;
   border-right-style: solid;
   border-width: 0.5rem;
   margin: 0;
-  padding: 2rem; }
+  padding: 1.5rem; }
 
 .workslist {
   height: 16rem;
@@ -85,7 +93,17 @@ h3 {
   box-sizing: border-box;
   border-bottom-style: solid;
   border-right-style: solid;
-  border-width: 0.5rem; }
+  border-width: 0.5rem;
+  padding: 1.5rem; }
+
+.workslist img {
+  max-width: 100%; }
+
+.content img {
+  width: 50%; }
+
+.rosa {
+  background-color: mistyrose; }
 
 @media (min-width: 40rem) {
   .navigation-item {
