--- a/css/janna.css
+++ b/css/janna.css
@@ -29,13 +29,12 @@ em {
 h2 {
   border-bottom-style: solid;
   border-right-style: solid;
-  border-width: 0.5rem;
+  border-width: 0.2rem;
   margin: 0;
   padding: 1.5rem; }
 
 h3 {
-  padding-right: 1.5rem;
-  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; }
+  padding-right: 1.5rem; }
 
 iframe {
   width: 100%; }
@@ -45,7 +44,7 @@ iframe {
   margin: auto;
   border-top-style: solid;
   border-left-style: solid;
-  border-width: 0.5rem;
+  border-width: 0.2rem;
   box-sizing: border-box; }
 
 .home-item, .navigation-item {
@@ -53,7 +52,7 @@ iframe {
   float: right;
   border-bottom-style: solid;
   border-right-style: solid;
-  border-width: 0.5rem;
+  border-width: 0.2rem;
   box-sizing: border-box; }
 
 .navigation-content {
@@ -65,7 +64,7 @@ iframe {
 .content {
   border-right-style: solid;
   border-bottom-style: solid;
-  border-width: 0.5rem;
+  border-width: 0.2rem;
   box-sizing: border-box;
   padding: 1.5rem; }
 
@@ -75,7 +74,7 @@ iframe {
 .leftCol, .rightCol {
   border-bottom-style: solid;
   border-right-style: solid;
-  border-width: 0.5rem;
+  border-width: 0.2rem;
   box-sizing: border-box;
   min-height: 16rem;
   padding: 1.5rem; }
@@ -83,7 +82,7 @@ iframe {
 .taglist {
   border-bottom-style: solid;
   border-right-style: solid;
-  border-width: 0.5rem;
+  border-width: 0.2rem;
   margin: 0;
   padding: 1.5rem; }
 
@@ -93,11 +92,12 @@ iframe {
   box-sizing: border-box;
   border-bottom-style: solid;
   border-right-style: solid;
-  border-width: 0.5rem;
+  border-width: 0.2rem;
   padding: 1.5rem; }
 
 .workslist img {
-  max-width: 100%; }
+  max-width: 100%;
+  max-height: calc(100% - 3.65rem); }
 
 .content img {
   width: 50%; }
@@ -133,6 +133,17 @@ iframe {
   .news {
     width: calc(100%/2); } }
 @media (max-width: 40rem) {
+  .navigation-item {
+    width: calc(100%/4); }
+
+  .home-item {
+    width: 0;
+    display: none; }
+
+  .workslist {
+    float: left;
+    width: calc(100%/2); } }
+@media (max-width: 20rem) {
   .navigation-item {
     width: calc(100%/4); }
 
