--- a/css/janna.scss
+++ b/css/janna.scss
@@ -62,6 +62,11 @@ h3 {
     // text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
+h4 {
+    margin-top: 0;
+    display: none;
+}
+
 iframe {
     width: 100%;
 }
@@ -132,7 +137,7 @@ iframe {
     border-bottom-style: solid;
     border-right-style: solid;
     border-width: $border-width;
-    padding: $content-padding
+    padding: calc(#{$content-padding} /4)
 }
 
 .workslist img {
@@ -172,7 +177,7 @@ iframe {
     }
     .workslist {
         float: left;
-        width: calc(100%/4);
+        width: calc(100%/6);
     }
     .news {
         width: calc(100%/2);
