--- a/css/janna.css
+++ b/css/janna.css
@@ -91,14 +91,14 @@ iframe {
   padding: 1.5rem; }
 
 .workslist {
-  height: 16rem;
   box-sizing: border-box;
   padding: calc(1.5rem /4);
   margin: calc(1.5rem /4);
   overflow: hidden; }
 
 .workslist img {
-  max-width: 100%; }
+  max-width: 100%;
+  max-height: 16rem; }
 
 .content img {
   width: 50%; }
