--- a/css/janna.css
+++ b/css/janna.css
@@ -50,7 +50,8 @@ iframe {
   border-top-style: solid;
   border-left-style: solid;
   border-width: 0rem;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  overflow: hidden; }
 
 .home-item, .navigation-item {
   height: 3.5rem;
