--- a/css/janna.css
+++ b/css/janna.css
@@ -110,8 +110,7 @@ iframe {
   overflow: hidden; }
 
 .workslist img {
-  max-width: 100%;
-  height: 16rem; }
+  max-height: 16rem; }
 
 .content img {
   width: 50%; }
