--- a/css/janna.css
+++ b/css/janna.css
@@ -114,8 +114,7 @@ iframe {
   overflow: hidden; }
 
 .workslist img {
-  max-width: 100%;
-  max-height: 16rem; }
+  max-width: 100%; }
 
 .content img {
   width: 50%; }
@@ -143,14 +142,20 @@ iframe {
     float: right; }
 
   .workslist {
-    float: left; } }
+    float: left; }
+
+  .workslist img {
+    height: 16rem; } }
 @media (max-width: 40rem) {
   .home-item {
     width: 0;
     display: none; }
 
   .workslist {
-    float: left; } }
+    float: left; }
+
+  .workslist img {
+    max-height: 16rem; } }
 @media (max-width: 20rem) {
   .home-item {
     width: 0;
@@ -165,6 +170,9 @@ iframe {
     height: 40%; }
 
   .workslist {
-    width: 100%; } }
+    width: 100%; }
+
+  .workslist img {
+    max-height: 16rem; } }
 
 /*# sourceMappingURL=janna.css.map */
