--- a/css/janna.css
+++ b/css/janna.css
@@ -116,9 +116,6 @@ iframe {
 .workslist img {
   max-width: 100%; }
 
-.content img {
-  width: 50%; }
-
 .startpage-content img {
   width: 100%; }
 
@@ -145,7 +142,10 @@ iframe {
     float: left; }
 
   .workslist img {
-    height: 16rem; } }
+    height: 16rem; }
+
+  .content img {
+    width: 50%; } }
 @media (max-width: 40rem) {
   .home-item {
     width: 0;
@@ -155,7 +155,10 @@ iframe {
     float: left; }
 
   .workslist img {
-    max-height: 16rem; } }
+    max-height: 16rem; }
+
+  .content img {
+    width: 100%; } }
 @media (max-width: 20rem) {
   .home-item {
     width: 0;
@@ -173,6 +176,9 @@ iframe {
     width: 100%; }
 
   .workslist img {
-    max-height: 16rem; } }
+    max-height: 16rem; }
+
+  .content img {
+    width: 100%; } }
 
 /*# sourceMappingURL=janna.css.map */
