--- a/css/janna.css
+++ b/css/janna.css
@@ -8,8 +8,7 @@ a {
 img {
   box-sizing: border-box;
   padding: 0.1rem;
-  display: block;
-  max-height: 100%; }
+  display: block; }
 
 p {
   margin-top: 0;
