--- a/css/janna.scss
+++ b/css/janna.scss
@@ -28,7 +28,7 @@ img {
     box-sizing: border-box;
     padding: 0.1rem;
     display: block;
-    max-height: 100%;
+    // max-height: 100%;
 }
 
 p {
