object-element syling and imageless workslist items

--- a/css/janna.css
+++ b/css/janna.css
@@ -22,6 +22,10 @@ em {
   animation: blinker 1s linear infinite;
   font-style: normal; }
 
+object {
+  width: 100%;
+  height: 50rem; }
+
 @keyframes blinker {
   50% {
     opacity: 0; } }
@@ -142,6 +146,16 @@ iframe {
 
   .workslist img {
     height: 16rem; }
+
+  .workslist-text {
+    background: #f0dcdc;
+    color: white;
+    padding-right: 10rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    margin: 0;
+    height: 16rem;
+    box-sizing: border-box; }
 
   .content img {
     width: 50%; } }
