--- a/css/janna.css
+++ b/css/janna.css
@@ -158,7 +158,7 @@ iframe {
     box-sizing: border-box; }
 
   .content img {
-    width: 50%; } }
+    max-width: 50%; } }
 @media (max-width: 40rem) {
   .home-item {
     width: 0;
@@ -171,7 +171,7 @@ iframe {
     max-height: 16rem; }
 
   .content img {
-    width: 100%; } }
+    max-width: 100%; } }
 @media (max-width: 20rem) {
   .home-item {
     width: 0;
@@ -192,6 +192,6 @@ iframe {
     max-height: 16rem; }
 
   .content img {
-    width: 100%; } }
+    max-width: 100%; } }
 
 /*# sourceMappingURL=janna.css.map */
