updated bludit from 1.5.2 to 3.9.2

--- a/css/janna.css
+++ b/css/janna.css
@@ -215,6 +215,15 @@ h5 {
 iframe {
   width: 100%; }
 
+.red {
+  color: red; }
+
+.green {
+  color: lime; }
+
+.blue {
+  color: blue; }
+
 .frame {
   max-width: 70rem;
   margin: auto;
