--- a/css/janna.scss
+++ b/css/janna.scss
@@ -120,10 +120,12 @@ iframe {
 
 .navigation-container {
     font-size: 120%;
+    padding-left: 6rem;
+    text-align: right;
 }
 
 .home-item , .navigation-item {
-    float: right;
+    display: inline-block;
     box-sizing: border-box;
     padding: 0.5rem;
 }
