--- a/css/janna.scss
+++ b/css/janna.scss
@@ -133,9 +133,6 @@ iframe {
     float: left;
     margin-right: 1rem;
 }
-.subNavigation {
-    float: left;
-}
 
 .active {
     text-decoration: line-through;
@@ -144,6 +141,14 @@ iframe {
 .worksListFrame , .content {
     box-sizing: border-box;
     padding: $content-padding;
+}
+.worksListFrame {
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: wrap;
+    align-items: space-between;
+    align-content: space-between;
+    justify-content: space-between;
 }
 
 .startpage-content {
@@ -154,11 +159,6 @@ iframe {
 }
 
 
-.leftCol , .rightCol {
-    box-sizing: border-box;
-    min-height: 16rem;
-    padding: $content-padding
-}
 
 .taglist {
     margin: 0;
@@ -176,14 +176,25 @@ iframe {
     box-sizing: border-box;
     padding: calc(#{$content-padding} /4);
     margin: calc(#{$content-padding} /4);
-    overflow: hidden;
+    // overflow: hidden;
     // max-width: 24rem;
+    align-self: flex-end;
 }
 
 .workslist img {
     max-width: 100%;
+    max-height: $workslist-height;
 }
-
+.workslist-text {
+    background: $accent_color;
+    color: white;
+    padding-right: 10rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    margin: 0;
+    height: 16rem;
+    box-sizing: border-box;
+}
 .news {
     background-color: #ff005e;
     // height: 32rem;
@@ -196,84 +207,20 @@ iframe {
 
 // large
 @media (min-width: $switch-width1) {
-    .navigation-item {
-        // width: calc(100%/8);
-    }
-    .home-item {
-        // width: 50%;
-    }
-    .leftCol {
-        width: 50%;
-        height: 100%;
-        float: left;
-        box-sizing: border-box;
-    }
-    .rightCol {
-        width: 50%;
-        height: 100%;
-        box-sizing: border-box;
-        float: right;
-    }
-    .workslist {
-        float: left;
-    }
-    .workslist img {
-        height: $workslist-height;
-    }
-    .workslist-text {
-        background: $accent_color;
-        color: white;
-        padding-right: 10rem;
-        padding-top: 1rem;
-        padding-left: 1rem;
-        margin: 0;
-        height: 16rem;
-        box-sizing: border-box;
-    }
     .content img {
         max-width: 50%;
-    }
-    .news {
-        // width: calc(100%/2);
     }
 }
 // media 
 @media (max-width: $switch-width1) {
-    .navigation-item {
-        // width: calc(100%/4);
-    }
-    .workslist {
-        float: left;
-    }
-    .workslist img {
-        max-height: $workslist-height;
-    }
     .content img {
         max-width: 100%;
     }
-
 }
 // small
 @media (max-width: $switch-width2) {
-    img {
-        // width: 75%;
-    }
-    .navigation-item {
-        // width: calc(100%/4);
-    }
-    .leftCol {
-        width: 100%;
-        height: 30%;
-    }
-    .rightCol {
-        width: 100%;
-        height: 40%;
-    }
     .workslist {
         width: 100%;
-    }
-    .workslist img {
-        max-height: $workslist-height;
     }
     .content img {
         max-width: 100%;
