updated some colors

--- a/css/janna.scss
+++ b/css/janna.scss
@@ -217,10 +217,10 @@ iframe {
     }
 }
 .news {
-    background-color: #ff005e;
+    background-color: #ffee2870;
 }
 .exhibitions {
-    background-color: #48fd90;
+    background-color: #fd8c8c4f;
 }
 
 // large
