--- a/css/janna.css
+++ b/css/janna.css
@@ -309,10 +309,10 @@ iframe {
   height: 16rem; }
 
 .news {
-  background-color: #ff005e; }
+  background-color: #ffee2870; }
 
 .exhibitions {
-  background-color: #48fd90; }
+  background-color: #fd8c8c4f; }
 
 @media (min-width: 40rem) {
   .content img {
