smaller line-height; blue font color

--- a/css/janna.css
+++ b/css/janna.css
@@ -148,9 +148,9 @@ textarea {
 
 body {
   font-family: 'Josefin Sans', sans-serif;
-  line-height: 1.4rem;
+  line-height: 1rem;
   font-weight: 300;
-  color: #463246; }
+  color: #0025ff; }
 
 a {
   text-decoration: none;
