--- a/css/janna.scss
+++ b/css/janna.scss
@@ -29,7 +29,21 @@ body {
     font-weight: 300;
     color: $font_color;
 }
-
+aside {
+    z-index: 9;
+    transform: rotate(-90deg);
+    right: -10rem;
+    top: 48vh;
+    position: fixed;
+    a {
+        margin-right: 5rem;
+        text-decoration: dashed underline;
+    }
+}
+footer {
+    float: right;
+    padding: 2rem;
+}
 a {
     text-decoration: none;
     color: inherit;
@@ -126,6 +140,20 @@ iframe {
     text-align: right;
 }
 
+.title {   
+    animation-name: spin;
+    animation-duration: 1000000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    position: fixed;
+    top: 1rem;
+    left: 0rem;
+}
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+
 .home-item , .navigation-item {
     display: inline-block;
     box-sizing: border-box;
@@ -194,15 +222,21 @@ iframe {
     box-sizing: border-box;
     padding: calc(#{$content-padding} /4);
     margin: calc(#{$content-padding} /4);
+    margin-bottom: $content-padding * 12;
     // overflow: hidden;
     // max-width: 24rem;
     align-self: flex-end;
+    img {
+        max-width: 100%;
+        max-height: $workslist-height;
+    }
 }
+.workslist:nth-child(2n)   img { max-height: $workslist-height + 2rem}
+.workslist:nth-child(3n)   img { max-height: $workslist-height + 5rem}
+.workslist:nth-child(5n)   img { max-height: $workslist-height + 7rem}
+.workslist:nth-child(7n)   img { max-height: $workslist-height + 11rem}
+.huge  img { max-height: $workslist-height + 24rem !important}
 
-.workslist img {
-    max-width: 100%;
-    max-height: $workslist-height;
-}
 .workslist-text {
     background: $accent_color;
     color: white;
