--- a/css/janna.css
+++ b/css/janna.css
@@ -320,8 +320,10 @@ iframe {
   margin-bottom: 6rem;
   align-self: flex-end; }
   .workslist img {
-    max-width: 100%;
-    height: 16rem; }
+    max-width: 100%; }
+
+.workslist img {
+  height: 16rem; }
 
 .workslist:nth-child(2n) img {
   height: 18rem; }
