--- a/css/janna.scss
+++ b/css/janna.scss
@@ -228,14 +228,15 @@ iframe {
     align-self: flex-end;
     img {
         max-width: 100%;
-        height: $workslist-height;
     }
 }
-.workslist:nth-child(2n)   img { height: $workslist-height + 2rem}
-.workslist:nth-child(3n)   img { height: $workslist-height + 5rem}
-.workslist:nth-child(5n)   img { height: $workslist-height + 7rem}
-.workslist:nth-child(7n)   img { height: $workslist-height + 9rem}
-.huge  img { height: $workslist-height + 14rem !important}
+// diffrent image sizes ... estimating 1rem equals 16px ... 
+.workslist                 img { height: $workslist-height; }                   // h=256px
+.workslist:nth-child(2n)   img { height: $workslist-height + 2rem;}             // h=288px
+.workslist:nth-child(3n)   img { height: $workslist-height + 5rem;}             // h=336px
+.workslist:nth-child(5n)   img { height: $workslist-height + 7rem;}             // h=368px
+.workslist:nth-child(7n)   img { height: $workslist-height + 9rem;}             // h=400px
+.huge                      img { height: $workslist-height + 14rem !important;} // h=480px
 
 .workslist-text {
     background: $accent_color;
